--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+}
+
+@font-face {
+  font-family: "Luxurious Roman";
+  src: url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap");
+}
+
+@font-face {
+  font-family: "Work Sans";
+  src: url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 }
