--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap");
 
 * {
   box-sizing: border-box;
@@ -22,6 +23,7 @@
   src: url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 }
 
-.App {
-  @apply flex min-h-screen w-full flex-col items-center dark:bg-dark;
+@font-face {
+  font-family: "Saira Condensed";
+  src: url("https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap");
 }
