--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap");
 
 * {
@@ -13,14 +11,8 @@
   scroll-behavior: smooth;
 }
 
-@font-face {
-  font-family: "Luxurious Roman";
-  src: url("https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap");
-}
-
-@font-face {
-  font-family: "Work Sans";
-  src: url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+body {
+  background-color: #151515;
 }
 
 @font-face {
