font install locally

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,5 +17,5 @@ body {
 
 @font-face {
   font-family: "Saira Condensed";
-  src: url("https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap");
+  src: url("./assets/fonts/Saira.ttf");
 }
